# pstokes-slip-pressure-code

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
docs/: IMPLEMENTATION_NOTES.md  NUMERICAL_METHOD.md  PROVENANCE.md  PUBLISHING.md  RELEASE_CHECKLIST.md
experiments/section_6_2_convergence/: README.md  run.py
experiments/section_6_3_projection_stability/: README.md  plot.py  run.py
published_results/: README.md
published_results/section_6_2_convergence/: multiplier_p1p5_alpha0p5_eoc.csv  multiplier_p1p5_alpha0p5_level00.npz  multiplier_p1p5_alpha0p5_level01.npz  multiplier_p1p5_alpha0p5_level02.npz  multiplier_p1p5_alpha0p5_level03.npz  multiplier_p1p5_alpha0p5_level04.npz  multiplier_p1p5_alpha0p5_level05.npz  multiplier_p1p5_alpha0p5_level06.npz  multiplier_p1p5_alpha0p5_level07.npz  multiplier_p1p5_alpha1_level00.npz  multiplier_p1p5_alpha1_level01.npz  multiplier_p1p5_alpha1_level02.npz  multiplier_p1p5_alpha1_level03.npz  multiplier_p1p5_alpha1_level04.npz  multiplier_p1p5_alpha1_level05.npz  multiplier_p1p5_alpha1_level06.npz  multiplier_p1p5_alpha1_level07.npz  multiplier_p1p5_alpha1p0_eoc.csv  multiplier_p2p5_alpha0p5_eoc.csv  multiplier_p2p5_alpha0p5_level00.npz  multiplier_p2p5_alpha0p5_level01.npz  multiplier_p2p5_alpha0p5_level02.npz  multiplier_p2p5_alpha0p5_level03.npz  multiplier_p2p5_alpha0p5_level04.npz  multiplier_p2p5_alpha0p5_level05.npz  (+47 more)
scripts/: generate_latex_tables.py
tests/: test_config.py  test_metrics.py  test_multiplier_nullspace.py  test_projections.py  test_results.py
(+16 files in other folders)
