[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pstokes-slip-pressure-code"
version = "1.0.0"
description = "Reproducibility code for p-Stokes pressure experiments with slip boundary conditions"
readme = "README.md"
requires-python = ">=3.8,<3.12"
license = {text = "BSD-3-Clause"}
authors = [
  {name = "Alex Kaltenbach"},
  {name = "Jörn Wichmann"},
]
dependencies = [
  "numpy",
  "scipy",
  "sympy",
  "matplotlib",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
test = ["pytest<9"]

[project.scripts]
pstokes-run = "pstokes_fem.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
